# cat-command

./: README.md  ccat.py  pyproject.toml  test.txt  test_ccat.py
