[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ccat"
version = "0.1.0"
description = "A Python implementation of the Unix cat command"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Mohamed Oueslati", email = "med.oues@gmail.com"}
]

[tool.setuptools]
py-modules = ["ccat"]

[project.scripts]
ccat = "ccat:main"
